Update update.yml with 3.13

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -7,26 +7,21 @@ on:
         description: CPython branch to use 
         required: false
         type: string
-        default: '3.12'
+        default: '3.13'
   pull_request:
     paths:
       - '.github/workflows/update.yml'
       - 'Makefile'
       - 'requirements.txt'
     branches:
-      - '3.12'
+      - '3.13'
   push:
     paths:
       - '.github/workflows/update.yml'
       - 'Makefile'
       - 'requirements.txt'
     branches:
-      - '3.12'
-      - '3.11'
-      - '3.10'
-      - '3.9'
-      - '3.8'
-      - '3.7'
+      - '3.13'
   schedule:
     - cron: '0 23 * * *'
 
@@ -151,9 +146,9 @@ jobs:
       fail-fast: false
       max-parallel: 3
       matrix:
-        branch: ['3.11', '3.10', '3.9', '3.8', '3.7', '3.6', '2.7']
+        branch: ['3.12', '3.11', '3.10', '3.9', '3.8', '3.7', '3.6', '2.7']
         include:
-          - branch: 3.11
+          - branch: 3.12
             overwrite: true
     steps:
       - name: Get branch name on push or schedule
