Group dependabot updates

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,10 @@ updates:
       - "rffontenelle"
     commit-message:
       prefix: "gha"
+    groups:
+       all-github-actions:
+          patterns:
+            - "*"
       
   - package-ecosystem: "pip"
     directory: "/"
@@ -17,3 +21,7 @@ updates:
       - "rffontenelle"
     commit-message:
       prefix: "pip"
+    groups:
+       all-pip-packages:
+          patterns:
+            - "*"
