--- a/requirements.txt
+++ b/requirements.txt
@@ -14,18 +14,22 @@ pomerge==0.1.4
 pospell==1.3
 powrap==1.0.1
 Pygments==2.18.0
+python-docs-theme>=2023.3.1,!=2023.7
 regex==2024.5.15
 requests==2.31.0
 snowballstemmer==2.2.0
-Sphinx==6.0.1
+Sphinx==7.3.0
+sphinx-autobuild==2024.4.16
 sphinx-intl==2.2.0
 sphinx-lint==0.9.1
+sphinx-notfound-page==1.0.0
 sphinxcontrib-applehelp==1.0.8
 sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-htmlhelp==2.0.5
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
+sphinxext-opengraph==0.7.5
 tqdm==4.66.4
 translate-toolkit==3.13.0
 urllib3==1.26.18
