--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -20,6 +20,7 @@ env:
   PYDOC_VERSION: ${{ inputs.version }}
   PYDOC_LANGUAGE: pt_BR
   PYDOC_TX_PROJECT: ${{ inputs.tx_project }}
+  TX_CLI_VERSION: '1.6.16'
 
 jobs:
   sync:
@@ -58,7 +59,7 @@ jobs:
       - name: Install Transifex CLI tool
         run: |
           cd /usr/local/bin
-          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash -s
+          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash -s -- $TX_CLI_VERSION
 
       - name: Install APT dependencies
         run: sudo apt update -y && sudo apt install gettext -y
