Fix version tag of Transifex CLI in sync.yml

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -59,7 +59,7 @@ jobs:
       - name: Install Transifex CLI tool
         run: |
           cd /usr/local/bin
-          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash -s -- $TX_CLI_VERSION
+          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash -s -- v$TX_CLI_VERSION
 
       - name: Install APT dependencies
         run: sudo apt update -y && sudo apt install gettext -y
