--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,8 @@
 *.mo
 *.po~
 
-# we don't want venv directories
-venv/
-.venv/
-
 # cpython checkout shouldn't be added
 cpython/
 
-# No need to keep logs
-logs/
+# do not include potodo temporary file
+.potodo/
