--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
+# we want only the PO files
 *.mo
-.tx/**/*.po
-venv/
-.pospell/
+*.po~
+
+# cpython checkout shouldn't be added
 cpython/
+
+# do not include potodo temporary file
+.potodo/
