Allow TX_TOKEN to be empty in check.yml
This should allow dependabot to run, without pulling translations and without send Telegram messages

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -26,10 +26,10 @@ on:
     secrets:
       TELEGRAM_TOKEN:
         description: "Token required for interacting with Telegram API"
-        required: true
+        required: false
       TELEGRAM_TO:
         description: "Account ID that will receive the telegram notification"
-        required: true
+        required: false
 
 permissions:
   contents: read
