--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -43,7 +43,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           ref: ${{ env.PYDOC_VERSION }}
-          path: cpython/Doc/locale/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES
+          path: cpython/Doc/locales/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES
 
       - uses: actions/setup-python@v5
         with:
@@ -79,7 +79,7 @@ jobs:
         if: ${{ contains(fromJSON('["schedule", "workflow_dispatch"]'), github.event_name) }}
         run: |
           # Clean up obsolete files
-          find cpython/Doc/locale/$PYDOC_LANGUAGE/LC_MESSAGES -name '*.po' -exec rm {} \;
+          find cpython/Doc/locales/$PYDOC_LANGUAGE/LC_MESSAGES -name '*.po' -exec rm {} \;
           ./scripts/pull_translations.sh
         env:
           TX_TOKEN: ${{ secrets.TX_TOKEN }}
@@ -87,14 +87,14 @@ jobs:
       - name: powrap
         if: steps.pull.outcome == 'success'
         run: |
-          cd cpython/Doc/locale/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES
+          cd cpython/Doc/locales/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES
           powrap *.po **/*.po
 
       - name: Update statistics
         if: always() && inputs.secrets.TX_TOKEN != 0
         run: |
-          python ./scripts/tx_stats.py > cpython/Doc/locale/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES/stats.json
-          git -C cpython/Doc/locale/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES/ diff stats.json
+          python ./scripts/tx_stats.py > cpython/Doc/locales/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES/stats.json
+          git -C cpython/Doc/locales/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES/ diff stats.json
         env:
           TX_TOKEN: ${{ secrets.TX_TOKEN }}
 
@@ -102,7 +102,7 @@ jobs:
         if: always()
         run: |
           ./scripts/potodo.sh
-          git diff cpython/Doc/locale/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES/potodo.md
+          git diff cpython/Doc/locales/${{ env.PYDOC_LANGUAGE }}/LC_MESSAGES/potodo.md
 
       # 4- Commit and push translations
 
@@ -112,7 +112,7 @@ jobs:
       - name: Push
         if: ${{ contains(fromJSON('["schedule", "workflow_dispatch"]'), github.event_name) }}
         run: |
-          cd cpython/Doc/locale/${{ env.PYDOC_LANGUAGE}}/LC_MESSAGES
+          cd cpython/Doc/locales/${{ env.PYDOC_LANGUAGE}}/LC_MESSAGES
           git push
 
 
