Drop lint parentheses search in old Python versions (#236)
* Drop lint parentheses search in old Python versions

* Quote version specifiers in requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 potodo==0.21.3
 powrap==1.0.1
 sphinx-intl==2.2.0
-sphinx-lint==1.0.0
+# avoid unnecessary parentheses search in old Python Docs
+sphinx-lint==1.0.0; python_version >= "3.12"
+sphinx-lint==0.9.1; python_version < "3.12"
