Use inputs.version in lint job in check.yml

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -120,7 +120,7 @@ jobs:
       - name: Set up Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: '3'
+          python-version: ${{ inputs.version }}
           cache: pip
           allow-prereleases: true
 
