--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -90,7 +90,7 @@ jobs:
           GITHUB_RUN_ID: ${{ github.run_id }}
 
       - name: Notify via Telegram
-        if: always() && steps.prepare.outcome == 'success' && github.event_name == 'schedule' && ${{ inputs.tx_project }} == 'python-newest'
+        if: always() && steps.prepare.outcome == 'success' && github.event_name == 'schedule' && inputs.tx_project == 'python-newest'
         uses: appleboy/telegram-action@v1.0.0
         with:
           to: ${{ secrets.TELEGRAM_TO }}
@@ -149,7 +149,7 @@ jobs:
           GITHUB_RUN_ID: ${{ github.run_id }}
 
       - name: Notify via Telegram
-        if: always() && steps.prepare.outcome == 'success' && github.event_name == 'schedule' && ${{ inputs.tx_project }} == 'python-newest'
+        if: always() && steps.prepare.outcome == 'success' && github.event_name == 'schedule' && inputs.tx_project == 'python-newest'
         uses: appleboy/telegram-action@v1.0.0
         with:
           to: ${{ secrets.TELEGRAM_TO }}
