Fix merge source and targets in sync.yml
Root directory files like glossary were not being included

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -103,7 +103,7 @@ jobs:
         run: |
           newer_branch=${PYDOC_VERSION%%.*}.$((${PYDOC_VERSION##*.}+1))
           git clone --depth 1 --single-branch --branch $newer_branch https://github.com/python/python-docs-pt-br ${newer_branch}-dir
-          pomerge --from ./${newer_branch}-dir/**/*.po --to ./${{ env.LANGUAGE_DIR }}/**/*.po
+          pomerge --from ./${newer_branch}-dir/{**/,}*.po --to ./${{ env.LANGUAGE_DIR }}/{**/,}*.po
           rm -rf ./${newer_branch}-dir
 
       - name: powrap
