Migrate build.sh to Python

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -70,7 +70,7 @@ jobs:
 
       - name: Build docs
         id: build
-        run: ./scripts/build.sh
+        run: python ./scripts/manage-translations.py build
 
       - name: Upload artifact - docs
         if: steps.build.outcome == 'success'
