Remove generate_templates.sh in favor of Python script

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -86,7 +86,7 @@ jobs:
       # 3- Pull translations
 
       - name: Generate template files and Transifex config file
-        run: ./scripts/generate_templates.sh
+        run: python ./scripts/manage_translations.py generate_templates
 
       - name: Pull translations from Transifex
         id: pull
