--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pomerge==0.1.4
-potodo==0.23.1
+potodo @ git+https://git.afpy.org/maciek/potodo@fix-pot-cli
 powrap==1.0.2
 sphinx-intl==2.3.1
 sphinx-lint==1.0.0
