Use correct development branch for potodo

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 pomerge==0.1.4
-potodo @ git+https://git.afpy.org/maciek/potodo@fix-pot-cli
+potodo @ git+https://git.afpy.org/maciek/potodo@merge-with-polib
 powrap==1.0.2
 sphinx-intl==2.3.1
 sphinx-lint==1.0.0
