--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,6 +13,10 @@ on:
         description: "Name of the Transifex translation project"
         required: true
         type: string
+      py_bin:
+        description: "Python binary version to use (useful if not equal to the 'version' input)"
+        required: false
+        type: string
   workflow_call:
     inputs:
       version:
@@ -22,6 +26,10 @@ on:
       tx_project:
         description: "Name of the Transifex translation project"
         required: true
+        type: string
+      py_bin:
+        description: "Python binary version to use (useful if not equal to the 'version' input)"
+        required: false
         type: string
     secrets:
       TELEGRAM_TOKEN:
@@ -50,11 +58,20 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 5
+          
+      - name: Set python binary version to use
+        run: |
+          if [[ -n "${{ inputs.py_bin }}" ]]; then
+            py_bin="${{ inputs.py_bin }}"
+          else
+            py_bin="${{ inputs.version }}"
+          fi
+          echo "PYTHON_BINARY_VERSION=$py_bin" >> $GITHUB_ENV
 
       - name: Set up Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ inputs.version }}
+          python-version: ${{ env.PYTHON_BINARY_VERSION }}
           cache: pip
           allow-prereleases: true
 
@@ -116,11 +133,20 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 5
+          
+      - name: Set python binary version to use
+        run: |
+          if [[ -n "${{ inputs.py_bin }}" ]]; then
+            py_bin="${{ inputs.py_bin }}"
+          else
+            py_bin="${{ inputs.version }}"
+          fi
+          echo "PYTHON_BINARY_VERSION=$py_bin" >> $GITHUB_ENV
 
       - name: Set up Python 3
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ inputs.version }}
+          python-version: ${{ env.PYTHON_BINARY_VERSION }}
           cache: pip
           allow-prereleases: true
 
