set py_bin to 3.9 in python-37.yml

--- a/.github/workflows/python-37.yml
+++ b/.github/workflows/python-37.yml
@@ -9,6 +9,7 @@ jobs:
     with:
       tx_project: ${{ github.workflow }}
       version: 3.7
+      py_bin: 3.9
     secrets: inherit
   check:
     uses: ./.github/workflows/check.yml
@@ -16,4 +17,5 @@ jobs:
     with:
       tx_project: ${{ github.workflow }}
       version: 3.7
+      py_bin: 3.9
     secrets: inherit
