Add Python 3.14 workflow as python-newest

--- a/.github/workflows/python-314.yml
+++ b/.github/workflows/python-314.yml
@@ -1,29 +1,29 @@
-name: python-313
+name: python-314
 
 on:
   workflow_dispatch:
   pull_request:
     branches:
       - main
-      - '3.13'
+      - '3.14'
   push:
     branches:
       - main
       - '3.13'
   schedule:
-    - cron: '15 23 * * *'
+    - cron: '0 23 * * *'
 
 jobs:
   sync:
     uses: ./.github/workflows/sync.yml
     with:
-      tx_project: ${{ github.workflow }}
-      version: 3.13
+      tx_project: python-newest
+      version: 3.14
     secrets: inherit
   check:
     uses: ./.github/workflows/check.yml
     needs: sync
     with:
-      tx_project: ${{ github.workflow }}
-      version: 3.13
+      tx_project: python-newest
+      version: 3.14
     secrets: inherit
