Add missing 'run' to step

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -186,4 +186,5 @@ jobs:
           sed -i 's/\xe2\x80\x8b//g' *.po **/*.po
 
       - name: Show difference (error if there is any)
+        run: |
           git diff --exit-code
