Use word-diff instead of line diff

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -187,4 +187,4 @@ jobs:
 
       - name: Show difference (error if there is any)
         run: |
-          git diff --exit-code --color
+          git diff --exit-code --color-words
